--- a/kasa/src/style/_variable.scss
+++ b/kasa/src/style/_variable.scss
@@ -7,7 +7,8 @@ $breakpoints: (
 
 $colors: (
     primary: #FF6060,
-    grey:#F6F6F6,    
+    grey:#F6F6F6,
+    starGrey:#E3E3E3,    
     white: #FFFFFF,
     black: #000000,
 );
