--- a/kasa/src/pages/Hosting/hosting.module.scss
+++ b/kasa/src/pages/Hosting/hosting.module.scss
@@ -1,11 +1,48 @@
-.collapse__wrapper{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 80px;
+.hosting{
+    &__header{
+        display: flex;
+        justify-content: space-between;
+        margin: 20px 0;
+        h1{
+            margin: 0;
+            font-size: 36px;
+            font-weight: 500;
+        }
+    }
+    .collapse__wrapper{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 80px;
+    }
+    .tag__wrapper{
+        display: flex;
+        gap: 15px;
+        margin: 20px 0;
+    }
+    .host__wrapper{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;        
+        & .host{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            font-size: 18px;
+            font-weight: 500;
+            text-align: end;
+            &__picture{
+                border-radius: 50%;
+                height: 64px;
+                width: 64px;
+                margin-left: 15px;
+                object-fit: contain;
+            }
+        }
+        
+
+    }
+       
+
 }
-.tag__wrapper{
-    display: flex;
-    gap: 15px;
-    margin: 2rem 0;
-}
-    
+
+ 
