--- a/kasa/src/components/Star-rating/star-rating.module.scss
+++ b/kasa/src/components/Star-rating/star-rating.module.scss
@@ -1,4 +1,5 @@
 @use "../../style/function" as function;
+@use "../../style/mixin" as mixin;
 
 .starRating{
 
@@ -11,5 +12,10 @@
     }
     .off {
         color: function.color(starGrey);
+    }
+    @include mixin.break-to(small){
+        .star{
+            font-size: 22px;
+        }
     }
 }
