--- a/kasa/src/components/Collapse/collapse.module.scss
+++ b/kasa/src/components/Collapse/collapse.module.scss
@@ -1,4 +1,5 @@
 @use "../../style/function" as function;
+@use "../../style/mixin" as mixin;
 
 .collapse{
     border: none;
@@ -10,6 +11,7 @@
         & ul{
             list-style: none;
             margin: 0;
+            padding: 0;
         }
     }
         
@@ -45,5 +47,24 @@
         &__open{
             transform: rotate(180deg);
         }
+    }
+    @include mixin.break-to(small){
+        &__button{
+            font-size: 13px;
+            padding: 5px;
+        }
+        &__arrow{
+            height: 15,2px;
+            width: 8.96px;
+            &__open{
+                height: 15,2px;
+                width: 8.96px;
+            }
+            
+        }
+        &__content{
+            font-size: 12px;
+        }
+        
     }
 }
