--- a/kasa/src/components/Footer/footer.module.scss
+++ b/kasa/src/components/Footer/footer.module.scss
@@ -1,4 +1,5 @@
 @use "../../style/function" as function;
+@use "../../style/mixin" as mixin;
 
 .footer{
     display: flex;
@@ -10,6 +11,11 @@
     color: function.color(white); 
     font-size: 24px;
     font-weight: 500;
-    margin-top: 50px;   
+    margin-top: 50px; 
+    
+    @include mixin.break-to(small){
+        font-size: 12px;
+        justify-content: center;
+    }
 
 }
