--- a/kasa/src/components/Header/header.module.scss
+++ b/kasa/src/components/Header/header.module.scss
@@ -1,4 +1,5 @@
 @use "../../style/function" as function;
+@use "../../style/mixin" as mixin;
 
 .header{
     display: flex;
@@ -21,5 +22,14 @@
         opacity: 0.7;
         width: 100%;
         object-fit: cover;
+    }
+    @include mixin.break-to(small) {
+        margin: 15px 0;
+        &__home{
+            height: 111px;
+        }        
+        &__title{
+            width: 70%;
+        }
     }
 }
