--- a/kasa/src/components/Nav/nav.module.scss
+++ b/kasa/src/components/Nav/nav.module.scss
@@ -15,13 +15,16 @@
         padding: 0;
         margin: 0;       
     }
+    img{
+        width: 100%;
+        height: auto;   
+    }
 
     &__links{
         display: flex;
         position: relative;
         font-weight: 500;
         font-size: 24px;
-        line-height: 142%;
     }
 
     &__link{
@@ -35,5 +38,20 @@
     }
     &__active{
         text-decoration: underline;
-    }  
+    }
+    @include mixin.break-to(small) {
+        align-items: center;
+        
+        &__brand{
+            width: 40%;
+        };
+        &__links{
+            font-size: 12px;
+            text-transform: uppercase;
+            margin-top: 0;
+        }
+        &__link{
+            margin-top: 0;
+        }
+    }    
 }
