--- a/kasa/src/components/Tag/tag.module.scss
+++ b/kasa/src/components/Tag/tag.module.scss
@@ -1,4 +1,5 @@
 @use "../../style/function" as function;
+@use "../../style/mixin" as mixin;
 
 .tag{
     font-size: 14px;
@@ -8,4 +9,10 @@
     text-align: center;
     color:function.color(white);
     border-radius: 10px;
+
+    @include mixin.break-to(small){
+        font-size: 10px;
+        padding: 5px 10px;
+        border-radius: 5px;
+    }
 }
