--- a/kasa/src/pages/Home/home.module.scss
+++ b/kasa/src/pages/Home/home.module.scss
@@ -1,5 +1,10 @@
+@use "../../style/mixin";
+
+
 .cardWrapper{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 25px;
+    @include mixin.grid-card-responsive(3);
+
+    @include mixin.break-to(large) {
+        @include mixin.grid-card-responsive(2);
+    }
 }
