--- a/kasa/src/style/global.scss
+++ b/kasa/src/style/global.scss
@@ -21,6 +21,9 @@ body {
     h#{$i} {
         color: function.color(primary);
         font-size: calc(3 - ($i * 0.5)) + rem;
+        @include mixin.break-to(small) {
+            font-size: calc(2 - ($i * 0.5)) + rem;
+        }
     }
 }
 
