--- a/kasa/src/components/Carousel/carousel.module.scss
+++ b/kasa/src/components/Carousel/carousel.module.scss
@@ -1,68 +1,66 @@
-@use "../../style/function" as function;
-@use "../../style/mixin" as mixin;
+@use '@/assets/style/function' as function;
+@use '@/assets/style/mixin' as mixin;
 
-.carousel{
-    overflow: hidden;
-    position: relative;
-    .inner{
-        white-space: nowrap;
-        transition: transform 0.3s;
+.carousel {
+  overflow: hidden;
+  position: relative;
+  .inner {
+    white-space: nowrap;
+    transition: transform 0.3s;
+  }
+  &__item {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    height: 415px;
+    background-color: transparent;
+    color: white;
+    & img {
+      object-fit: cover;
+      height: 100%;
+      width: 100%;
+      border-radius: 25px;
+      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     }
-    &__item{
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;        
-        height: 415px;
-        background-color: transparent;
-        color:white;
-        & img{
-            object-fit: cover;
-            height: 100%;
-            width: 100%;
-            border-radius: 25px;
-            filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-        }
+  }
+  &__indicators {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    width: 100%;
+    top: 40%;
+    & > button {
+      margin: 0 15px;
+      background: none;
+      border: none;
+      &:hover {
+        cursor: pointer;
+      }
     }
-    &__indicators{
-        display: flex;
-        justify-content: space-between;        
-        position: absolute;
-        width: 100%;
-        top: 40%;        
-        & > button{
-            margin: 0 15px;
-            background: none;
-            border: none;
-            &:hover{
-                cursor: pointer;
-            }
-        }
+  }
+  &__count {
+    position: absolute;
+    bottom: 6%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: function.color(white);
+    font-size: 18px;
+    font-weight: 500;
+  }
+  @include mixin.break-to(small) {
+    &__item {
+      height: 255px;
+      & img {
+        border-radius: 10px;
+        filter: none;
+      }
     }
-    &__count{
-        position: absolute;
-        bottom: 6%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: function.color(white);
-        font-size: 18px;
-        font-weight: 500;
+    & .button__arrow {
+      height: 25px;
+      width: auto;
     }
-    @include mixin.break-to(small) {
-        &__item{
-            height: 255px;
-            & img{
-                border-radius: 10px;
-                filter: none;
-            }
-            
-        }
-        & .button__arrow{
-            height: 25px;
-            width: auto;
-        }
-        &__count{
-            visibility: hidden;
-        }
-        
+    &__count {
+      visibility: hidden;
     }
+  }
 }
