--- a/kasa/src/components/Container/container.module.scss
+++ b/kasa/src/components/Container/container.module.scss
@@ -1,18 +1,18 @@
-@use "../../style/mixin" as mixin;
+@use '@/assets/style/mixin' as mixin;
 
 .container {
-    max-width: 1320px;
+  max-width: 1320px;
+  margin: 0 auto;
+  @include mixin.break-to(large) {
+    max-width: 1140px;
     margin: 0 auto;
-    @include mixin.break-to(large) {
-        max-width: 1140px;
-        margin: 0 auto;
-    }
-    @include mixin.break-to(medium) {
-        max-width: 960px;
-        margin: 0 auto;
-    }
-    @include mixin.break-to(small) {
-        max-width: 720px;
-        margin: 0 1rem;
-    }
+  }
+  @include mixin.break-to(medium) {
+    max-width: 960px;
+    margin: 0 auto;
+  }
+  @include mixin.break-to(small) {
+    max-width: 720px;
+    margin: 0 1rem;
+  }
 }
