--- a/kasa/src/components/Nav/nav.module.scss
+++ b/kasa/src/components/Nav/nav.module.scss
@@ -1,57 +1,57 @@
-@use "../../style/function" as function;
-@use "../../style/variable" as variable;
-@use "../../style/mixin" as mixin;
+@use '@/assets/style/function' as function;
+@use '@/assets/style/variable' as variable;
+@use '@/assets/style/mixin' as mixin;
 
-.navbar{
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    right: 0;
-    left: 0;
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  right: 0;
+  left: 0;
+  width: 100%;
+  padding: 1rem;
+  ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+  img {
     width: 100%;
-    padding: 1rem;
-    ul {        
-        list-style-type: none;
-        padding: 0;
-        margin: 0;       
-    }
-    img{
-        width: 100%;
-        height: auto;   
-    }
+    height: auto;
+  }
 
-    &__links{
-        display: flex;
-        position: relative;
-        font-weight: 500;
-        font-size: 24px;
-    }
+  &__links {
+    display: flex;
+    position: relative;
+    font-weight: 500;
+    font-size: 24px;
+  }
 
-    &__link{
-        margin: 0 .7rem;
-        display: inline-block;
-        position: relative;
-        align-items: center;
-        margin-top: 2rem;
-        color: inherit;
-        text-decoration: none;    
+  &__link {
+    margin: 0 0.7rem;
+    display: inline-block;
+    position: relative;
+    align-items: center;
+    margin-top: 2rem;
+    color: inherit;
+    text-decoration: none;
+  }
+  &__active {
+    text-decoration: underline;
+  }
+  @include mixin.break-to(small) {
+    align-items: center;
+
+    &__brand {
+      width: 40%;
     }
-    &__active{
-        text-decoration: underline;
+    &__links {
+      font-size: 12px;
+      text-transform: uppercase;
+      margin-top: 0;
     }
-    @include mixin.break-to(small) {
-        align-items: center;
-        
-        &__brand{
-            width: 40%;
-        };
-        &__links{
-            font-size: 12px;
-            text-transform: uppercase;
-            margin-top: 0;
-        }
-        &__link{
-            margin-top: 0;
-        }
-    }    
+    &__link {
+      margin-top: 0;
+    }
+  }
 }
